[project]
name = "prompt-tiles"
version = "0.1.0"
description = "Zero-shot tumor tile classification and visualization with CONCH"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "huggingface_hub>=0.23.0",
  "h5py>=3.10.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
  "torch>=2.1.0"
]

[project.urls]
Homepage = "https://github.com/johnspjun/prompt-tiles"

[tool.setuptools.packages.find]
where = ["src"]
